--- a/estilos.css
+++ b/estilos.css
@@ -17,7 +17,8 @@ body{
 }
 
 .cervezas{
-    padding: 150px 0;
+    padding: 150px 0px;
+    
 }
 
 .swiper-slide{
@@ -97,16 +98,105 @@ body{
 }
 
 .header-content{
-    text-align: center;
+    text-align: right;
     margin-top: 100px;
 }
 
-.slider {
-    width: 1100px;
+.slide {
+    width: 1000px;
 }
 
 .enlace{
     display: inline-block;
     color: #edb40c;
-    margin: 15px;
+    margin-top: 15px;
+}
+
+.producto{
+    align-items: center;
+    width: 500px;
+}
+
+.producto img {
+    height: 250px;
+}
+
+.producto-txt {
+    margin-top: 25px;
+}
+
+.producto-txt h4{
+    color: #edb40c;
+    font-size: 15px;
+    margin: 0;
+}
+
+.producto-txt p{
+    color: #aaa;
+    font-size: 16px;
+    margin: 0;
+}
+
+.precio{
+    color: #edb40c;
+}
+
+.nosotro {
+    padding: 80px 0px;
+    background-image: linear-gradient(rgba(20,20,20,0.5),rgba(20,20,20,0.4)),url(imagenesBirra/seccion.jpg);
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size:cover
+}
+
+.nosotro-txt h2{
+    color: #edb312;
+    font-size: 80px;
+    font-weight: 800;
+    text-transform: uppercase;
+    line-height: 100px;
+}
+.nosotro-txt p{
+    color: #fff;
+    font-size: 80px;
+    font-weight: 800;
+    text-transform: uppercase;
+    line-height: 100px;
+}
+.nosotro-txt span{
+    color: #edb312;
+    font-size: 80px;
+    font-weight: 800;
+    text-transform: uppercase;
+    line-height: 100px;
+}
+
+.info {
+    text-align: right;
+}
+
+hr {
+    border: 1px solid #edb3129a;
+}
+
+.footer-txt{
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer-txt img{
+    width: 50px;
+}
+
+.links{
+    padding: 50px 0px;
+    text-align: center;
+}
+
+.links ul {
+    display: flex;
+    justify-content: space-between;
+    width: 500px;
 }
